--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>Manuel Portfolio</title>
   </head>
   <body>
-    <h1>Mein Portfolio</h1>
+    <header>
+      <!-- Hier Logo einfügen -->
+      <img src="" alt="MS Logo" />
+      <nav class="top-nav">
+        <ul>
+          <li class="crumb"><a href="#">ABOUT</a></li>
+          <li class="crumb"><a href="#">MOTIVATION</a></li>
+          <li class="crumb"><a href="#">CONNECT</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="about">
+        <div class="img"></div>
+        <div class="description"></div>
+      </section>
+      <!-- Trennlinie einfügen -->
+      <section class="motivation">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora,
+          pariatur. Ab doloremque totam tempora velit optio sit atque, eum ipsam
+          ipsum ad molestiae repellat suscipit consectetur facere autem placeat
+          fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eum
+          quae tempora omnis quaerat fugiat dolores laborum laboriosam minus
+          distinctio placeat voluptate consequatur beatae esse, exercitationem
+          dolore eius alias totam?
+        </p>
+      </section>
+      <!-- Trennlinie einfügen -->
+      <section class="connect">
+        <div class="linkedin"><img src="" alt="LinkedIn" /></div>
+        <div class="xing"><img src="" alt="XING" /></div>
+        <div class="linkedin"><img src="" alt="GitHub" /></div>
+      </section>
+    </main>
   </body>
 </html>
