--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <section id="about" class="about">
         <div class="img"><img src="assets/profile.jpg" alt="profilbild" /></div>
         <div class="description">
+          <p class="text">WHO?</p>
           <h1>Manuel Schmid</h1>
           <h2>Future Web Developer, tech geek, music enthusiast</h2>
         </div>
