--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
           fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eum
           quae tempora omnis quaerat fugiat dolores laborum laboriosam minus
           distinctio placeat voluptate consequatur beatae esse, exercitationem
+          dolore eius alias totam? Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Tempora, pariatur. Ab doloremque totam tempora velit
+          optio sit atque, eum ipsam ipsum ad molestiae repellat suscipit
+          consectetur facere autem placeat fuga? Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Non eum quae tempora omnis quaerat
+          fugiat dolores laborum laboriosam minus distinctio placeat voluptate
+          consequatur beatae esse, exercitationem dolore eius alias totam? Lorem
+          ipsum dolor sit, amet consectetur adipisicing elit. Tempora, pariatur.
+          Ab doloremque totam tempora velit optio sit atque, eum ipsam ipsum ad
+          molestiae repellat suscipit consectetur facere autem placeat fuga?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eum quae
+          tempora omnis quaerat fugiat dolores laborum laboriosam minus
+          distinctio placeat voluptate consequatur beatae esse, exercitationem
           dolore eius alias totam?"
         </p>
       </section>
@@ -46,17 +59,17 @@
       <section id="connect" class="connect">
         <h1>Connect</h1>
         <div id="linkedin" class="socials">
-          <a href="https://de.linkedin.com/in/manuelschmidrw"
+          <a href="https://de.linkedin.com/in/manuelschmidrw" target="_blank"
             ><img src="assets/linkedin.png" alt="LinkedIn"
           /></a>
         </div>
         <div id="xing" class="socials">
-          <a href="https://www.xing.com/profile/Manuel_Schmid97"
+          <a href="https://www.xing.com/profile/Manuel_Schmid97" target="_blank"
             ><img src="assets/xing-social-logotype.png" alt="XING"
           /></a>
         </div>
         <div id="github" class="socials">
-          <a href="https://github.com/manusmd"
+          <a href="https://github.com/manusmd" target="_blank"
             ><img src="assets/github.png" alt="GitHub"
           /></a>
         </div>
